# idm-course

./: .gitignore  README.md  SONG_SHOPPING_LIST.md  course.yaml  podcast.xml  pyproject.toml
.claude/agent-prompts/: lesson-author.md  lesson-expander.md
ableton-course/: .gitignore  SONG_SHOPPING_LIST.md  course.yaml  pyproject.toml
ableton-course/style/: lexicon.md  voice.md
ableton-course/tools/: README.md  ableton_render.py  render_voiceover.py  stemforge_runner.py
lessons/w01-listen-subtract/: lesson.yaml
lessons/w02-subtraction/: lesson.yaml
lessons/w03-simpler-basics/: lesson.yaml
lessons/w04-warp-modes/: lesson.yaml
lessons/w05-aphex-tuning/: lesson.yaml
lessons/w06-fourtet-layering/: lesson.yaml
lessons/w07-squarepusher-chops/: lesson.yaml
lessons/w08-autechre-feedback/: lesson.yaml
lessons/w09-vocal-chopping/: lesson.yaml
lessons/w10-variation-generation/: lesson.yaml
lessons/w11-beat-switch/: lesson.yaml
lessons/w12-ship-two-tracks/: lesson.yaml
references/: bibliography.json  glossary.json  images.json  links.yaml  songs.json
references/pdfs/: _purchase_todo.md  (+1 more)
specs/: compass_artifact_wf-c51f364d-ce3d-4091-afd0-4f796276ecb5_text_markdown.md  compass_artifact_wf-efadee41-f0cf-4413-b6ce-b54c96118223_text_markdown.md
stemforge-demo-material/: recipes.yaml
style/: teaser-calendar.yaml  voice.md
tools/: README.md  build_episode.py  build_podcast_art.py  build_podcast_feed.py  fetch_images.py  fetch_pdfs.sh  glossary_to_pdf.py  render_glossary.py  render_slides.py  songs_upgrade.py  stemforge_link.py  validate_lesson.ts
(+574 files in other folders)
